--- a/src/container/Header/header.scss
+++ b/src/container/Header/header.scss
@@ -28,10 +28,6 @@
   flex: 1;
   flex-direction: row;
 
-  @media screen and (min-width: 2000px) {
-    padding-top: 8rem;
-  }
-
   @media screen and (max-width: 1200px) {
     flex-direction: column;
   }
@@ -43,17 +39,13 @@
 
 .app__header-info {
   height: 100%;
+  width: 100%;
 
   flex: 0.65;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-
-  @media screen and (max-width: 2000px) {
-    width: 100%;
-    margin-right: 0;
-  }
 }
 
 .app__header-badge {
@@ -80,7 +72,7 @@
 
     h1 {
       font-family: var(--font-code);
-      font-size: 2rem;
+      font-size: clamp(1.3rem, 1.5vw + 0.5rem, 2.5rem);
     }
 
     p {
@@ -90,14 +82,6 @@
 
     @media screen and (max-width: 900px) {
       width: 90%;
-
-      h1 {
-        font-size: 1.3rem;
-      }
-
-      p {
-        font-size: 1rem;
-      }
     }
   }
 
@@ -134,15 +118,7 @@
   }
 
   span {
-    font-size: 2.5rem;
-
-    @media screen and (min-width: 2000px) {
-      font-size: 5rem;
-    }
-
-    @media screen and (max-width: 900px) {
-      font-size: 2rem;
-    }
+    font-size: clamp(2rem, 2vw + 0.5rem, 4rem);
   }
 
   @media screen and (max-width: 1200px) {
@@ -186,29 +162,17 @@
 
 .circles-left {
   div:nth-child(1) {
-    width: 100px;
-    height: 100px;
+    width: clamp(80px, 6vw, 200px);
+    height: clamp(80px, 6vw, 200px);
     margin-top: 5rem;
     margin-left: 20px;
   }
 
   div:nth-child(2) {
-    width: 180px;
-    height: 180px;
+    width: clamp(140px, 10vw, 250px);
+    height: clamp(140px, 10vw, 250px);
     margin-top: 2rem;
     margin-left: 200px;
-  }
-
-  @media screen and (min-width: 2000px) {
-    div:nth-child(1) {
-      width: 270px;
-      height: 270px;
-    }
-
-    div:nth-child(2) {
-      width: 140px;
-      height: 140px;
-    }
   }
 
   @media screen and (max-width: 1200px) {
@@ -218,36 +182,19 @@
 
 .circles-right {
   div:nth-child(1) {
-    width: 160px;
-    height: 160px;
+    width: clamp(110px, 9vw, 200px);
+    height: clamp(110px, 9vw, 200px);
   }
 
   div:nth-child(2) {
-    width: 210px;
-    height: 210px;
+    width: clamp(150px, 12vw, 250px);
+    height: clamp(150px, 12vw, 250px);
     margin: 4rem;
   }
 
   div:nth-child(3) {
-    width: 120px;
-    height: 120px;
-  }
-
-  @media screen and (min-width: 2000px) {
-    div:nth-child(1) {
-      width: 200px;
-      height: 200px;
-    }
-
-    div:nth-child(2) {
-      width: 250px;
-      height: 250px;
-    }
-
-    div:nth-child(3) {
-      width: 150px;
-      height: 150px;
-    }
+    width: clamp(90px, 7vw, 150px);
+    height: clamp(90px, 7vw, 150px);
   }
 
   @media screen and (max-width: 1200px) {
@@ -341,7 +288,7 @@
   text-align: center;
 
   h1 {
-    font-size: 2.5rem;
+    font-size: clamp(1.3rem, 1.5vw + 0.5rem, 3rem);
     margin: auto;
 
     font-family: var(--font-roboto-slab);
@@ -353,16 +300,6 @@
     color: var(--secondary-color);
     font-family: var(--font-code);
     font-weight: 400;
-    font-size: 2.5rem;
-  }
-
-  @media screen and (max-width: 900px) {
-    h1 {
-      font-size: 1.3rem;
-    }
-
-    span {
-      font-size: 1.3rem;
-    }
+    font-size: clamp(1.3rem, 1.5vw + 0.5rem, 3rem);
   }
 }
